<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graySecondary"
    tools:context=".RegisterTwoAct">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/bg_gradient_blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_selfie_time"
            android:textColor="@color/whitePrimary"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:fontFamily="@font/mregular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selfie_time_desc"
            android:textColor="@color/whitePrimary"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mlight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1"/>

        <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        android:background="@drawable/bg_btn_white_secondary">

        <LinearLayout
            android:layout_marginTop="120dp"
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/mlight"
                android:textSize="20sp"
                android:textColor="@color/grayPrimary"/>
            <EditText
                android:id="@+id/nama_lengkap"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mregular"
                android:background="@drawable/bg_input"
                android:textColor="@color/blackPrimary"
                android:lines="1"
                android:textSize="16sp"
                android:autofillHints="Exampel"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:fontFamily="@font/mlight"
                android:textSize="20sp"
                android:textColor="@color/grayPrimary"/>
            <EditText
                android:id="@+id/bio"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mregular"
                android:background="@drawable/bg_input"
                android:textColor="@color/blackPrimary"
                android:lines="1"
                android:textSize="16sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/bg_view_circle_picture"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/icon_nopic"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.florent37.shapeofview.shapes.CircleView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pic_photo_register_user"
            android:layout_width="90dp"
            android:layout_height="90dp"/>
    </com.github.florent37.shapeofview.shapes.CircleView>

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_btn_add_picture"
        android:text="+"
        android:fontFamily="@font/mmedium"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_white_secondary"
                android:gravity="center">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_back" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mmedium"
                android:text="@string/btn_continue"
                android:textColor="@color/whitePrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>